--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>Raphaël Playground in CoffeeScript</title>
 <link rel="stylesheet" href="style.css" type="text/css" media="screen">
+<script type="text/javascript" src="underscore.js"></script>
 <script type="text/javascript" src="jquery.js"></script>
 <script type="text/javascript" src="shell.js"></script>
 <script type="text/javascript" src="raphael.js"></script>
@@ -85,6 +86,7 @@ ceil 5.2 <span># 6</span>
     <option value="splatter">Splatter</option>
     <option value="spiral">Spiral</option>
     <option value="chart">Chart</option>
+    <option value="equation">Equation</option>
   </select>
   <button id="run" type="button">Graph it!</button>
   <button id="clear" type="button">Clear</button>
